--- a/.github/workflows/dag_deployment_dev-int.yml
+++ b/.github/workflows/dag_deployment_dev-int.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: DAG image creation and airflow deployment
         if: always()
-        uses: elgohr/Publish-Docker-Github-Action@master
+        uses: elgohr/Publish-Docker-Github-Action@v5
         with:
           name: ${{ secrets.DEV_RELEASE_NAME }}/airflow:deploy-ci-${{ github.run_number }}
           username: _
