--- a/.github/workflows/dag_deployment_stg.yml
+++ b/.github/workflows/dag_deployment_stg.yml
@@ -15,7 +15,7 @@ jobs:
           token: ${{ secrets.G_TOKEN }}
          
       - name: DAG image creation and airflow deployment
-        uses: elgohr/Publish-Docker-Github-Action@master
+        uses: elgohr/Publish-Docker-Github-Action@v5
         with:
           name: ${{ secrets.STG_RELEASE_NAME }}/airflow:deploy-ci-${{ github.run_number }}
           username: _
